# opengl-game-engine

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  EBO.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  ObjectStorage.cpp  ObjectStorage.h  Player.cpp  Player.h  README.md  Shader.cpp  ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.h  debug.bat  debug.sh  default.frag  default.vert  glad.c  imgui.ini  opengl-game-engine.rc  opengl-game-engine.sln  opengl-game-engine.vcxproj  opengl-game-engine.vcxproj.filters  release.bat  release.sh  resource.h  scene.json
Assets/Scenes/: scene.json
Assets/Scripts/: GameScripts.csproj  PlayerController.cs  ScriptAPI.cs  Transform.cs  Vector3.cs  compile.bat
Assets/Shaders/: default.frag  default.vert
Assets/models/building/: MetalMineBuilding.fbx
Assets/models/door2/: door.fbx
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  Main.cpp  imgui.ini  opengl-game-engine.rc
Engine/Assets/Scenes/: scene.json
Engine/Assets/Scripts/: GameScripts.csproj  Vector3.cs
Engine/Assets/models/character/: char.fbx
Engine/CoreAssets/Models/plane/: plane.fbx
Engine/CoreAssets/Shaders/: default.frag  default.vert
Engine/Libraries/: CMakeLists.txt
Engine/Libraries/include/glad/: glad.h
Engine/include/: Camera.h  Component.h  Config.h  EBO.h  EditorUI.h  Engine.h  GameObject.h  Light.h  Mesh.h  Model.h  ObjectStorage.h  Shader.h  Texture.h  VAO.h  VBO.h
Engine/include/Engine/: Camera.h  Config.h  EBO.h  EditorUI.h  Engine.h  GameObject.h  Mesh.h  Model.h  ObjectStorage.h  Shader.h  Texture.h  VAO.h  VBO.h
Engine/include/Engine/Components/: Camera.h  Component.h  ComponentRegistry.h  Light.h  Model.h
Engine/include/Engine/Scripting/: ScriptBindings.h  ScriptComponent.h  ScriptEngine.h
Engine/source/: Camera.cpp  EBO.cpp  EditorUI.cpp  Engine.cpp  GameObject.cpp  Light.cpp  Mesh.cpp  Model.cpp  ObjectStorage.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
Engine/source/Engine/: Camera.cpp  EBO.cpp  EditorUI.cpp  Engine.cpp  GameObject.cpp  Mesh.cpp  Model.cpp  ObjectStorage.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
Engine/source/Engine/Components/: Camera.cpp  Light.cpp  Model.cpp
Engine/source/Engine/Scripting/: ScriptComponent.cpp  ScriptEngine.cpp
Game/: CMakeLists.txt  Game.csproj
Game/Assets/Scenes/: scene.json
Game/Assets/Scripts/: PlayerController.cs  compile.bat
Game/include/: ObjectStorage.h  Player.h
Game/include/Game/: ObjectStorage.h  Player.h
Game/source/: ObjectStorage.cpp  Player.cpp
Game/source/Game/: ObjectStorage.cpp  Player.cpp
Libraries/: CMakeLists.txt
Libraries/lib/: glfw3.lib
Scripting/: Component.cs  PlayerController.cs  Scripting.csproj  compile.bat
VisualStudioExtension/: ActivationCheck.cs  ActivationState.cs  AdornmentLayerDefinitions.cs  EngineMessageAdornmentInitializer.cs  EngineMessageAdornmentManager.cs  EngineMessageQuickInfoProvider.cs  SupportedMethods.cs  VisualStudioExtension.csproj  VisualStudioExtension.csproj.bak  VisualStudioExtensionPackage.cs  source.extension.vsixmanifest  source.extension.vsixmanifest.bak
imgui/: CMakeLists.txt
include/Engine/: Camera.h  Component.h  Config.h  Engine.h  GameObject.h  Light.h  Mesh.h  Model.h  ObjectStorage.h  ScriptBindings.h
include/Engine/Components/: Camera.h  Light.h  Model.h
include/Engine/Scripting/: ScriptBindings.h  ScriptComponent.h  ScriptEngine.h
models/door/: door.gltf
source/Engine/: Camera.cpp  EBO.cpp  EditorUI.cpp  Engine.cpp  Light.cpp  Mesh.cpp  Model.cpp  ObjectStorage.cpp  Shader.cpp  Texture.cpp  VAO.cpp
source/Engine/Components/: Camera.cpp
source/Engine/Scripting/: ScriptComponent.cpp  ScriptEngine.cpp
source/Game/: ScriptAPI.cs
